# django_composite_auto_field

./: .gitignore  LICENSE  MANIFEST.in  PyPI.txt  README.rst  manage.py  requirements.txt  setup.cfg
db/models/: fields.py
django_composite_auto_field/: asgi.py  fields.py  settings.py  urls.py  wsgi.py
django_composite_auto_field_tests/: asgi.py  settings.py  urls.py  wsgi.py
tests/: models.py  tests.py
tests/migrations/: 0001_initial.py  0002_alter_testmodelb_custom_code.py  0003_testmodelc.py
